<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#B7E0F8">

    <ImageView
        android:id="@+id/image_flora"
        android:layout_width="165dp"
        android:layout_height="189dp"
        android:contentDescription="@string/florzinha"
        android:src="@drawable/flor" />

    <ImageView
        android:id="@+id/image_linda"
        android:layout_width="165dp"
        android:layout_height="169dp"
        android:contentDescription="@string/lindinha"
        android:src="@drawable/linda" />

    <ImageView
        android:id="@+id/image_docinho"
        android:layout_width="166dp"
        android:layout_height="137dp"
        android:contentDescription="@string/docinho"
        android:src="@drawable/docinho" />

    <Button
        android:id="@+id/button_respostas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_respostas" />

</LinearLayout>
