<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/character_image" />

    <TextView
        android:id="@+id/text_character_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edit_text_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/why_like" />

    <!-- Adicionando campo para a idade -->
    <EditText
        android:id="@+id/edit_text_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite sua idade"
        android:inputType="number"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>
