<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B7E0F8">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_flora"
            android:layout_width="165dp"
            android:layout_height="189dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="350dp"
            android:layout_marginBottom="351dp"
            android:contentDescription="@string/florzinha"
            android:src="@drawable/flor" />
    </FrameLayout>

    <ImageView
        android:id="@+id/image_linda"
        android:layout_width="165dp"
        android:layout_height="169dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/lindinha"
        android:src="@drawable/linda" />

    <ImageView
        android:id="@+id/image_docinho"
        android:layout_width="166dp"
        android:layout_height="137dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/docinho"
        android:src="@drawable/docinho" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="260dp"
        android:text="@string/toque_personagem" />

    <Spinner
        android:id="@+id/my_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <FrameLayout
        android:id="@+id/character_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
</RelativeLayout>
